# KompjuterGejm

./: .gitignore  BUILD.gn  Makefile  README.md  build.sh
android/: .gitignore  AndroidManifest.xml.template
app/: sources.gni
app/inc/common/: exception.hpp  format-string.hpp  loger.h
app/inc/common/window/: window-base.hpp
app/inc/game/: game.hpp
app/inc/platform/android/: android_native_app_glue.c  android_native_app_glue.h  android_startup.hpp
app/inc/platform/android/window/: android-window.hpp
app/inc/platform/linux/: linux_startup.hpp
app/inc/platform/linux/window/: wayland-window.hpp  xdg-shell-protocol.c
app/src/: main.cpp
app/src/common/: format-string.cpp
app/src/game/: game.cpp
app/src/platform/android/: exception.cpp  logger.cpp
app/src/platform/android/window/: android-window.cpp
app/src/platform/linux/: exception.cpp  logger.cpp
app/src/platform/linux/window/: wayland-window.cpp
engine/: Makefile
engine/include/: game-engine.hpp
engine/include/ecs/: core.hpp  drawing-service.hpp  entity-manager.hpp
engine/include/ecs/utils/: array-stack.hpp  singleton.hpp
engine/include/vulkan/: buffer.hpp  builder.hpp  handle.hpp  renderer-base.hpp  renderer.hpp  structures.hpp  swapchain-builder.hpp  swapchain.hpp  vertex.hpp  wrapper.hpp
engine/include/vulkan/rendering/: graphics-pipeline-builder.hpp  graphics-pipeline.hpp
engine/src/: BUILD.gn  main.cpp
engine/src/ecs/: drawing-service.cpp  entity-manager.cpp
engine/src/vulkan/: buffer.cpp  handle.cpp  renderer-base.cpp  renderer.cpp  swapchain-builder.cpp  swapchain.cpp
engine/src/vulkan/rendering/: graphics-pipeline-builder.cpp
engine/src/vulkan/shaders/: triangle.vert.glsl
game-engine/: Makefile  utils.mk
game-engine/include/: game-engine.hpp
game-engine/include/utils/: ansi-colors.hpp  ansi-colors.hpp.pch  exeption.hpp  exeption.hpp.pch  loger.h  static-arr-len.hpp  static-arr-len.hpp.pch
game-engine/include/vulkan/: handle.hpp  renderer-base.hpp  renderer.hpp  structures.hpp  swapchain-builder.hpp  swapchain.hpp
game-engine/include/vulkan/rendering/: graphics-pipeline-builder.hpp  pipeline-builder.hpp  render-pass-builder.hpp
game-engine/include/window/: window-base.hpp  window-dims.hpp  window.hpp
game-engine/include/window/wayland/: wayland-deleter.hpp  wayland-window.hpp
game-engine/src/: main.cpp
game-engine/src/utils/: exeption.cpp
game-engine/src/vulkan/: handle.cpp  renderer.cpp  swapchain-builder.cpp  swapchain.cpp
game-engine/src/vulkan/shaders/: triangle.frag.glsl
game-engine/src/window/: window-base.cpp  window.cpp
src/: main.cpp
(+1 files in other folders)
